# DeepStock

./: 2025-03-15T12-54_export.csv  README.md  app.py  main.py  pyproject.toml
