[project]
name = "deepstock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "lunarcalendar>=0.0.9",
    "numpy>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.0",
    "prophet>=1.1.6",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "setuptools>=76.0.0",
    "streamlit>=1.43.2",
    "yfinance>=0.2.54",
]
